--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity"
-    android:background="#e8f4f8"
+    android:background="@drawable/weather_background"
     android:orientation="vertical"
     android:padding="16dp">
     <TextView
@@ -13,7 +13,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:textSize="40sp"
-        android:text="Weather Update"/>
+        android:textColor="@color/white"
+        android:text="@string/weather_update"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -30,7 +31,9 @@
             android:id="@+id/etCity"
             android:layout_marginBottom="10dp"
             android:ems="10"
-            android:hint="Enter City Name"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:hint="@string/enter_city_name"
             android:inputType="textPersonName" />
         <EditText
             android:layout_width="match_parent"
@@ -38,7 +41,9 @@
             android:id="@+id/etCountry"
             android:layout_marginBottom="10dp"
             android:ems="10"
-            android:hint="Enter Country Code (Optional)"
+            android:textColorHint="@color/white"
+            android:textColor="@color/white"
+            android:hint="@string/enter_country_code_optional"
             android:inputType="textPersonName" />
         <Button
             android:layout_width="match_parent"
@@ -48,7 +53,7 @@
             android:background="#0070c7"
             android:textColor="@android:color/white"
             android:onClick="getWeatherDetails"
-            android:text="Get"
+            android:text="@string/get"
             app:backgroundTint="@null" />
         <ScrollView
             android:layout_width="match_parent"
@@ -56,19 +61,8 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/white"
                 android:id="@+id/tvResult" />
         </ScrollView>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-        </View>
-        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/adViewMain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            ads:adSize="SMART_BANNER"
-            ads:adUnitId="@string/banner_adunit_id">
-        </com.google.android.gms.ads.AdView>
     </LinearLayout>
 </LinearLayout>
